--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_ENV=local
 API_PORT=8888
-DB_HOST=forum-postgres            # RUNNING THE APP WITH DOCKER
-#DB_HOST=127.0.0.1                # RUNNING THE APP WITHOUT DOCKER
+#DB_HOST=forum-postgres            # RUNNING THE APP WITH DOCKER
+DB_HOST=127.0.0.1                # RUNNING THE APP WITHOUT DOCKER
 DB_DRIVER=postgres
 API_SECRET=98hbun98h
 DB_USER=postgres
@@ -10,8 +10,8 @@ DB_NAME=forum
 DB_PORT=5432
 
 
-TEST_DB_HOST=forum-postgres-test       # RUNNING THE TEST  WITH DOCKER
-#TEST_DB_HOST=127.0.0.1                  # RUNNING THE TEST  WITHOUT DOCKER
+#TEST_DB_HOST=forum-postgres-test       # RUNNING THE TEST  WITH DOCKER
+TEST_DB_HOST=127.0.0.1                  # RUNNING THE TEST  WITHOUT DOCKER
 TEST_DB_DRIVER=postgres
 TEST_API_SECRET=98hbun98h
 TEST_DB_USER=postgres
